# learn-axum-workspace

./: Cargo.toml  Dockerfile
app/: Cargo.toml
app/src/: main.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  uuid.rs
controllers/: Cargo.toml
controllers/src/: error.rs  lib.rs
controllers/src/todo/: post.rs  retrieve.rs
db/: Cargo.toml
db/src/: lib.rs  memdb.rs
domains/: Cargo.toml
domains/src/todo/: task.rs
gateways/: Cargo.toml
gateways/src/: kvs.rs  lib.rs  todo.rs
usecases/: Cargo.toml
usecases/src/todo/: mod.rs  post.rs  retrieve.rs
web/: Cargo.toml
web/src/axum/: di.rs  layer.rs  mod.rs  router.rs
