[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"]}
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
async-trait = "0.1.53"
tokio = { version = "1.17.0", features = ["sync"] }

[dev-dependencies]
mockall = "0.11.0"
