[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path = "../common" }
controllers = { path = "../controllers" }
gateways = { path = "../gateways" }
db = { path = "../db" }

axum = "0.5.3"
tower-http = { version = "0.3.0", features = ["trace", "request-id", "util"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
